--- a/docs/何锦诚的工作内容.md
+++ b/docs/何锦诚的工作内容.md
@@ -156,7 +156,8 @@ const stream = await this.openai.chat.completions.create({
 
 ## Doubao 1.5 Vision Pro 32k + Few Shot
 
-最后我尝试了在 doubao-1.5-vision-pro-32k 模型上使用 few-shot 来优化提示词，ACC 达到了 71.20%。
+最后我尝试了在 doubao-1.5-vision-pro-32k 模型上使用 few-shot 来优化提示词。
+在测试集上进行了独立的 5 次测试，每次随机抽取 100 个案例，ACC 的平均值是 71.20%，是我目前在测试集上的最高分。
 
 ```javascript
 const prompt = {
@@ -192,3 +193,22 @@ export default prompt;
 ```
 
 测试日志为：[vision-pro-few-shot-1.txt](https://github.com/JacksonHe04/smart-table-llm/blob/main/llm-api/logs/vision-pro-few-shot-1.txt)、[vision-pro-few-shot-2.txt](https://github.com/JacksonHe04/smart-table-llm/blob/main/llm-api/logs/vision-pro-few-shot-2.txt)、[vision-pro-few-shot-3.txt](https://github.com/JacksonHe04/smart-table-llm/blob/main/llm-api/logs/vision-pro-few-shot-3.txt)、[vision-pro-few-shot-4.txt](https://github.com/JacksonHe04/smart-table-llm/blob/main/llm-api/logs/vision-pro-few-shot-4.txt)、[vision-pro-few-shot-5.txt](https://github.com/JacksonHe04/smart-table-llm/blob/main/llm-api/logs/vision-pro-few-shot-5.txt)。
+
+测试结果表明，在表格数据上，doubao-1.5-vision-pro-32k 模型在处理表格数据时表现良好，能够正确地识别表格结构并生成有效的答案。
+
+few-shot 提示词的效果也很明显，在测试集上的表现优于规则提示词。
+
+将 few-shot 提示词应用到 doubao-1.5-vision-pro-32k 模型上，可以得到更好的结果。
+
+## 测试结果表格
+<!-- TODO -->
+| 模型 | 提示词方法 | ACC | 测试样本数 | 测试次数 | 备注 |
+|------|------------|-----|------------|----------|------|
+| doubao-1.5-pro-256k | Zero-shot | 57% | 100 | 1 | 基础测试 |
+| doubao-1.5-pro-32k | 规则提示词(中文) | 62% | 100 | 1 | 相比Zero-shot提升5% |
+| doubao-1.5-pro-32k | 规则提示词(英文) | 63% | 100 | 5 | 平均值61.60% |
+| doubao-1.5-pro-32k | 复杂规则提示词 | 59% | 100 | 1 | 性能反而下降 |
+| doubao-1.5-pro-32k | One-shot | 63% | 100 | 5 | 平均值63% |
+| doubao-1.5-pro-32k | One-shot (训练集) | 67% | 300 | 1 | 在训练集上的测试 |
+| doubao-1.5-vision-pro-32k | 简单提示词 | 70.40% | 100 | 5 | 首次突破70% |
+| doubao-1.5-vision-pro-32k | Few-shot | 71.20% | 100 | 5 | 最佳性能 |
